# colregs

./: README.md  pyproject.toml
docs/: FINAL_REPORT.md  PACKAGE_SUMMARY.md  colregs_rules.md  ir_sim_integration.md  usage_guide.md
examples/: quickstart.py
integration_tests/: test_with_irsim.py
src/colregs_core/encounter/: classifier.py  types.py
src/colregs_core/geometry/: bearings.py
src/colregs_core/risk/: cpa_tcpa.py  risk_matrix.py
tests/: test_cpa_tcpa.py  test_encounter.py  test_simulation_integration.py
