[tool.poetry]
name = "colregs-core"
version = "0.1.0"
description = "COLREGs-based encounter situation classification and collision risk assessment for maritime navigation"
authors = ["Maritime Robotics Lab"]
readme = "README.md"
license = "MIT"
packages = [{include = "colregs_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.0"

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
